# GSpread-Plus

./: .buildinfo  .gitignore  LICENSE  MANIFEST  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree  reference.doctree
.github/workflows/: docs.yml
GSpreadPlus/: __init__.py  errors.py  gspreadplus.py
_modules/: index.html
_modules/GSpreadPlus/: errors.html  gspreadplus.html
docs/: conf.py  document.css  documentation.html  reference.rst
docs/_build/doctrees/: environment.pickle  index.doctree  reference.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/GSpreadPlus/: errors.html  gspreadplus.html
docs/_build/html/_sources/: index.rst.txt
src/GSpreadPlus/: __init__.py  errors.py  gspreadplus.py  types.py
src/GSpreadPlus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
