[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GSpreadPlus"
version = "0.5.1"
license = { file = "LICENSE" }
authors = [
    {name = "FishballNoodles", email = "joelkhorxw@gmail.com"},
]
description = "A high-level wrapper library for Google Sheets API v4"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ['Google Spreadsheets', 'Sheets', 'Sheetsv4', 'google-spreadsheets']
dependencies = [
    "gspread>=6.2.1",
]

[project.urls]
Homepage = "https://github.com/TheReaper62/GSpread-Plus"
Documentation = "https://thereaper62.github.io/GSpread-Plus/documentation"

[tool.setuptools.packages.find]
where = ["src"]